# intel_fw

./: .gitignore  404.html  Cargo.toml  README.md  analysis.html  architecture.html  book.toml  extend.html  flake.nix  images.html  index.html  intel_flash_partitioning.drawio  intro.html  knowledge.html  milestones.md  platforms.html  print.html  searcher-c2a407aa.js  searchindex-2826e453.js  searchindex-2c5c9e2f.js  searchindex-3618174f.js  searchindex-3d63009e.js  searchindex-3f087dcb.js  searchindex-410de32a.js  searchindex-4fefa95a.js  searchindex-51af2096.js  searchindex-7d6939cf.js  searchindex-9219133f.js  searchindex-9b2f5134.js  searchindex-b5271eba.js  searchindex-be3bdc30.js  searchindex-c6f1e848.js  searchindex-c9873b76.js  searchindex-dad56501.js  searchindex-dc7d38b1.js  searchindex-e33bb2a8.js  toc-0695aabd.js  toc-204d27e3.js  toc-85b9e334.js  toc-905e7556.js  (+2 more)
.github/workflows/: gh-pages.yml  release.yml  rust.yml
book/: 404.html  architecture.html  intro.html  knowledge.html  platforms.html  print.html  searchindex.js  toc-de266211.js  toc.html  toc.js
docs/: SUMMARY.md  analysis.md  analyze_unpack.drawio  architecture.md  extend.md  images.md  intro.md  knowledge.md  platforms.md  unpacking.md
scripts/: bdiffstat  testall.sh
src/: clean.rs  dir.rs  fit.rs  fpt.rs  ifd.rs  ifwi.rs  lib.rs  main.rs  me.rs  meta.rs  part.rs  show.rs  trans.rs  ver.rs
src/dir/: gen2.rs  gen3.rs  gen3_man.rs  man.rs
src/part/: fpt.rs  gen2.rs  gen3.rs  generic.rs  part.rs  partitions.rs
tests/: me11.fpt  me11.ifd  me11_cleaned.fpt  me8.ifd
