[package]
name = "intel_fw"
version = "0.1.2"
edition = "2024"
description = "Parsing and editing library for Intel firmware images"
repository = "https://github.com/platform-system-interface/intel_fw"
homepage = "https://platform-system-interface.github.io/intel_fw/"
authors = ["Daniel Maslowski <info@orangecms.org>", "PSI contributors"]
license = "GPL-2.0-only"

[lib]
name = "intel_fw"
path = "src/lib.rs"

[[bin]]
name = "intel_fw"
path = "src/main.rs"

[lints.clippy]
expect_used = "deny"
unwrap_used = "deny"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.28"
md5 = "0.8.0"
num-bigint = "0.4.6"
sha2 = "0.10.9"

phf = { version = "0.13.1", default-features = false, features = ["macros"] }
phf_macros = "0.13.1"
strum = { version = "0.27.2", features = ["derive"] }

bitfield-struct = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11.19"
zerocopy = "0.8.27"
zerocopy-derive = "0.8.27"
